# team-manager

./: .dockerignore  .env-example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  afin-team-configuration.yaml  app.py  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties  team-config-example.yaml  team-config.yaml  team-configuration.yaml
k9s/: config-map.yaml  deployment.yaml  ingress.yaml  service.yaml
review_manager/: app.py  gl.py  schema.py  team.py
reviewer/: app.py  app_services.py  config.py  main.py  schemas.py  services.py  utilites.py  views.py
reviewer/bot/: __init__.py  mm.py  schemas.py
reviewer/teams/: __init__.py  git.py  schemas.py  team.py
reviewer/templates/: bot-msg-field-diffs.j2  bot-msg-field-mr.j2  bot-msg-field-project.j2  bot-msg-group.j2  bot-msg-text.j2  git-mr-thread-body.j2
team_manager/: app.py  schema.py  schemas.py  team.py
